--- a/manifests/heqet-apps.yaml
+++ b/manifests/heqet-apps.yaml
@@ -3,8 +3,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: heqet
-spec: {}
-status: {}
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -18,7 +16,7 @@ spec:
   source:
     path: .
     repoURL: 'https://github.com/nold360/heqet'
-    targetRevision: HEAD
+    targetRevision: k3s
     helm:
       valueFiles:
         - values.yaml
