--- a/values.d/argocd.yaml
+++ b/values.d/argocd.yaml
@@ -796,11 +796,10 @@ configs:
     # XG+bpHPF4SiCpAxthP5WNa17zuvk+CDsMZgZNuhYNMo=
     # -----END RSA PRIVATE KEY-----
   secret:
-    createSecret: true
+    createSecret: false
     ## Annotations to be added to argocd-secret
     ##
-    annotations:
-      sealedsecrets.bitnami.com/managed: true
+    annotations: {}
 
     # Webhook Configs
     githubSecret: ""
