--- a/templates/crds.yaml
+++ b/templates/crds.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.installCRDs }}
-{{- range $path, $_ := .Files.Glob "crds/*.yaml" }}
+{{- range $path, $_ := .Files.Glob "crds/*.yml" }}
 {{ $.Files.Get $path }}
 ---
 {{- end }}
