--- a/values.yaml
+++ b/values.yaml
@@ -54,24 +54,6 @@ apps:
           - admin.password
           - server.secretkey
     
-  # Loki / Grafana / Promtail Stack for Logging & Metrics
-  - name: loki-stack
-    disabled: false
-    repoURL: https://grafana.github.io/helm-charts
-    chart: loki-stack
-    targetRevision: 2.3.1
-    vhost: grafana.k3s
-    ingress: grafana
-
-  # Polaris - Scan cluster for stuff
-  - name: polaris
-    repoURL: https://charts.fairwinds.com/stable
-    chart: polaris
-    targetRevision: 3.1.1
-    ingress: dashboard
-    namespace: polaris
-    vhost: polaris.k3s
-
   # Vault
   - name: vault
     repoURL: https://helm.releases.hashicorp.com
@@ -80,6 +62,7 @@ apps:
     vhost: vault.k3s
     ingressHostsKeymap: true
     ingress: server
+    syncWave: "-3"
     parameters:
       - name: ui.enabled
         value: true
@@ -90,10 +73,21 @@ apps:
       - name: server.dev.enabled
         value: true
 
+  # Vault Secret Operator for automatic Secret injection
   - name: vault-secrets-operator
     repoURL: https://ricoberger.github.io/helm-charts
     chart: vault-secrets-operator
     targetRevision: 1.14.2
+    syncWave: "-2"
+
+  # Loki / Grafana / Promtail Stack for Logging & Metrics
+  - name: loki-stack
+    disabled: false
+    repoURL: https://grafana.github.io/helm-charts
+    chart: loki-stack
+    targetRevision: 2.3.1
+    vhost: grafana.k3s
+    ingress: grafana
 
   # PiHole
   - name: pihole
@@ -114,4 +108,12 @@ apps:
         value: folding.k3s
       - name: ingess.enabled
         value: true
-        
+
+  # Polaris - Scan cluster for stuff
+  - name: polaris
+    repoURL: https://charts.fairwinds.com/stable
+    chart: polaris
+    targetRevision: 3.1.1
+    ingress: dashboard
+    namespace: polaris
+    vhost: polaris.k3s
