--- a/templates/heqet-apps.yaml
+++ b/templates/heqet-apps.yaml
@@ -8,7 +8,7 @@ metadata:
   name: {{ .namespace | default .name | quote }}
   annotations:
     argocd.argoproj.io/sync-wave: "-42"
-{{ .annotations | toYaml | indent 4}}
+{{ with .annotations }}{{ .annotations | toYaml | indent 4}}{{ end }}
 {{- end }}
 ---
 apiVersion: argoproj.io/v1alpha1
@@ -34,7 +34,7 @@ spec:
     targetRevision: {{ .targetRevision | default $.Values.defaults.targetRevision | default "HEAD" | quote }}
     {{ if .chart }}chart: {{ .chart | quote }}{{ end }}
     helm:
-      {{- if .parameters }}
+      {{- with .parameters }}
       parameters:
 {{ .parameters | toYaml | indent 8 }}
       {{- end }}
