--- a/values.d/loki-stack.yaml
+++ b/values.d/loki-stack.yaml
@@ -51,6 +51,10 @@ prometheus:
       scrape_interval: 10s
       static_configs:
         - targets: ['192.168.1.1:9100']
+    - job_name: 'borg'
+      scrape_interval: 10s
+      static_configs:
+        - targets: ['192.168.1.111:9942']
 
   podSecurityPolicy:
     enabled: true
