--- a/values.yaml
+++ b/values.yaml
@@ -72,6 +72,12 @@ apps:
           - admin-user
           - admin-password
  
+  # Container Registry
+  - name: harbor
+    repoURL: https://charts.bitnami.com/bitnami
+    chart: harbor
+    targetRevision: 9.8.3
+
   # Object Storage
   - name: minio
     repoURL: https://charts.bitnami.com/bitnami
