--- a/values.yaml
+++ b/values.yaml
@@ -29,15 +29,13 @@ generators:
           podSelector:
             matchLabels:
               app: traefik
-
-        # Isolate Namespace / Allow communication in Namespace
-        - podSelector: {}
       # Allow DNS
       egress:
         - ports:
           - port: 53
-        - to:
-          - namespaceSelector: {}
+            protocol: UDP
+          - port: 53
+            protocol: TCP
 
 # App Definitions that will be managed in ArgoCD
 apps:
@@ -56,7 +54,7 @@ apps:
       fromApps:
         - argocd
       ingress:
-        - 2368 #Healthcheck?
+        - poer: 2368 #Healthcheck?
     parameters:
       - name: ingress.enabled
         value: "true"
@@ -78,5 +76,7 @@ apps:
         value: ClusterIP
     allow:
       egress:
-        - 80
-        - 443
+        - port: 80
+        - port: 443
+      fromApps:
+        - default
