--- a/values.yaml
+++ b/values.yaml
@@ -43,13 +43,20 @@ apps:
     targetRevision: 2.3.6
     syncWave: "0"
 
-  # Traefik Ingress - Internal
+  # NGINX Ingress - Internal
   - name: ingress-internal
     repoURL: https://kubernetes.github.io/ingress-nginx
     chart: ingress-nginx
     targetRevision: 3.29.0
     syncWave: "0"
- 
+
+   # NGINX Ingress - External
+  - name: ingress-external
+    repoURL: https://kubernetes.github.io/ingress-nginx
+    chart: ingress-nginx
+    targetRevision: 3.29.0
+    syncWave: "0"
+
   # Vault
   - name: vault
     repoURL: https://helm.releases.hashicorp.com
