--- a/values.d/drone.yaml
+++ b/values.d/drone.yaml
@@ -43,16 +43,17 @@ service:
 ingress:
   enabled: true
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: vault-issuer
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: drone.k3s
+    - host: drone.dc
       paths:
         - "/"
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:
+  - secretName: drone-tls
+     hosts:
+       - drone.dc
 
 resources: {}
   # limits:
