--- a/values.d/loki-stack.yaml
+++ b/values.d/loki-stack.yaml
@@ -16,8 +16,15 @@ grafana:
 
   ingress:
     enabled: true
+    annotations:
+      cert-manager.io/cluster-issuer: vault-issuer
+      kubernetes.io/ingress.class: nginx
     hosts:
-      - grafana.k3s
+      - grafana.dc
+    tls:
+     - secretName: grafana-tls
+       hosts:
+         - grafana.dc
 
   sidecar:
     datasources:
