--- a/values.d/pihole.yaml
+++ b/values.d/pihole.yaml
@@ -37,22 +37,23 @@ serviceWeb:
     # metallb.universe.tf/address-pool: network-services
     # metallb.universe.tf/allow-shared-ip: pihole-svc
 
-virtualHost: pihole.k3s
+virtualHost: pihole.dc
 
 ingress:
   enabled: true
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  annotations:
+    cert-manager.io/cluster-issuer: vault-issuer
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   path: /
   hosts:
     # virtualHost (default value is pi.hole) will be appended to the hosts
-    - pihole.k3s
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
+    - pihole.dc
+  tls:
+    - secretName: pihole-tls
+      hosts:
+        - pihole.dc
   #     #- virtualHost (default value is pi.hole) will be appended to the hosts
-  #      - chart-example.local
 
 # Probes configuration
 probes:
