--- a/values.yaml
+++ b/values.yaml
@@ -43,6 +43,18 @@ apps:
     targetRevision: 2.3.6
     syncWave: "0"
 
+  - name: cert-manager
+    repoURL: https://charts.jetstack.io
+    chart: cert-manager
+    targetRevision: 1.3.0
+    parameters:
+      - name: installCRDs
+        value: "true"
+    secrets:
+      - name: cert-manager-vault-approle
+        keys:
+          - secretId
+
   # NGINX Ingress - Internal
   - name: ingress-internal
     repoURL: https://kubernetes.github.io/ingress-nginx
