--- a/values.yaml
+++ b/values.yaml
@@ -94,17 +94,24 @@ apps:
     targetRevision: 1.14.2
     syncWave: "-2"
 
-  # Loki / Grafana / Promtail Stack for Logging & Metrics
+  # Prometheus / Loki / Grafana / Promtail Stack for Logging & Metrics
+  - name: prometheus
+    repoURL: https://prometheus-community.github.io/helm-charts
+    chart: prometheus
+    targetRevision: 13.8.0
+ 
   - name: loki-stack
     repoURL: https://grafana.github.io/helm-charts
     chart: loki-stack
+    noCreateNamespace: true
+    namespace: prometheus
     targetRevision: 2.3.1
     secrets:
       - name: loki-stack-grafana
         keys:
           - admin-user
           - admin-password
- 
+
   # KeyCloak
   - name: keycloak
     disabled: true
