--- a/values.d/prometheus.yaml
+++ b/values.d/prometheus.yaml
@@ -101,14 +101,14 @@ pushgateway:
       # seccomp.security.alpha.kubernetes.io/defaultProfileName: 'docker/default'
       # apparmor.security.beta.kubernetes.io/defaultProfileName: 'runtime/default'
 
-extraScrapeConfigs:
+extraScrapeConfigs: |
  - job_name: 'openwrt'
    scrape_interval: 10s
    static_configs:
     - targets: ['192.168.1.1:9100']
-- job_name: 'borg'
-  scrape_interval: 120s
-  static_configs:
+ - job_name: 'borg'
+   scrape_interval: 120s
+   static_configs:
     - targets: ['192.168.1.111:9942']
 
 # Adds option to add alert_relabel_configs to avoid duplicate alerts in alertmanager
